k8s-cluster-state/system-configs/calico-networkpolicies.yaml
apiVersion: v1
items:
- apiVersion: networking.k8s.io/v1
  kind: NetworkPolicy
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"networking.k8s.io/v1","kind":"NetworkPolicy","metadata":{"annotations":{},"name":"allow-dns-from-all-pods","namespace":"kube-system"},"spec":{"ingress":[{"from":[{"podSelector":{}},{"namespaceSelector":{}}],"ports":[{"port":53,"protocol":"UDP"},{"port":53,"protocol":"TCP"}]}],"podSelector":{"matchLabels":{"k8s-app":"kube-dns"}},"policyTypes":["Ingress"]}}
    creationTimestamp: "2025-11-20T15:41:06Z"
    generation: 1
    name: allow-dns-from-all-pods
    namespace: kube-system
    resourceVersion: "102501"
    uid: 7255e4fb-a05c-44a7-85ec-71f2dfff4d71
  spec:
    ingress:
    - from:
      - podSelector: {}
      - namespaceSelector: {}
      ports:
      - port: 53
        protocol: UDP
      - port: 53
        protocol: TCP
    podSelector:
      matchLabels:
        k8s-app: kube-dns
    policyTypes:
    - Ingress
kind: List
metadata:
  resourceVersion: ""
